[package]
name = "liquislime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
api-generation = []

[dependencies]
derive_more = "0.99.17"
fp-bindgen = { version = "2.4.0", features = ["generators"] }
serde = { version = "1.0.152", features = ["derive"] }
