[package]
name = "liquislime-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_winit", "png", "webgl2"]}
image = { version = "0.24", default-features = false }
winit = { version = "0.29", default-features = false }
tracing = {version = "0.1.40", default-features = false }
derive_more = {version =  "0.99.17", default-features = false, features = ["add", "add_assign", "not", "from", "into"]}
wasm-bridge = { version = "0.3.1", default-features = false, features = ["component-model"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.115", default-features = false }
js-sys = { version =  "0.3.66", default-features = false }
reqwest = { version = "0.11.22", default-features = false }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0 

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1
