[package]
name = "liquislime-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.1", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_winit", "png", "webgl2"]}
bevy_egui = { version = "0.27.0", default-features = false, features = ["render", "default_fonts"] }
image = { version = "0.24.9", default-features = false }
winit = { version = "0.29.15", default-features = false }
tracing = {version = "0.1.40", default-features = false }
derive_more = {version =  "0.99.17", default-features = false, features = ["add", "add_assign", "not", "from", "into"]}
anyhow = { version = "1.0.86" }
ref-cast = { version = "1.0.22" }
try-lock = { version = "0.2.5" }
atomic_refcell = { version = "0.1.13" }
once_cell = { version = "1.19.0" }
slab = { version = "0.4.9" }
rmp = { version = "0.8.14" }
wasm-bridge = { version = "0.4.0", default-features = false }
js-sys = { version =  "0.3.69", default-features = false }
reqwest = { version = "0.12.2", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0 

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1
