[package]
name = "liquislime-slime-clicker-plugin"
version = "0.1.0"
authors = ["kajacx"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "liquislime:slime-clicker"

[dependencies]
wit-bindgen = { version = "0.24.0", default-features = false, features = ["macros", "realloc"] }
derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign", "not", "from", "into"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.115", default-features = false, features = ["std"] }
