[package]
name = "slime-clicker"
version = "0.1.0"
authors = ["kajacx"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "liquislime:slime-clicker"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign", "not", "from", "into"] }
rmpv = { version = "1.3.0" }
try-lock = { version = "0.2.5" }
console_error_panic_hook = { version = "0.1.7" }
